kubernetes/nodeapp-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: vprofile/vprofileapp
        ports:
        - name: node-app-port
          containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  ports:
  - port: 80
    targetPort: node-app-port
    protocol: TCP
  selector:
    app: node-app
  type: LoadBalancer
